add local reverse zone

--- a/roles/bind9/master/config/templates/named.conf.j2
+++ b/roles/bind9/master/config/templates/named.conf.j2
@@ -28,3 +28,10 @@ zone "{{ default_zone }}" {
     allow-update { key rndc-key; };
     notify yes;
 };
+
+zone "{{ default_reverse_zone }}" {
+    type master;
+    file "data/db.reverse-defaultzone.local";
+    allow-update { key rndc-key; };
+    notify yes;
+};
