--- a/roles/bind9/slaves/config/templates/named.conf.j2
+++ b/roles/bind9/slaves/config/templates/named.conf.j2
@@ -1,3 +1,8 @@
+# Allow calls for statistics management
+statistics-channels {
+    inet {{ hostvars[inventory_hostname].ip }} port 8053 allow { any; };
+};
+
 options {
     listen-on port 53 { any; };
     listen-on-v6 { none; };
